[gd_scene load_steps=16 format=2]

[ext_resource path="res://components/config/component_config.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=2]
[ext_resource path="res://components/config/component_config_field.gd" type="Script" id=3]
[ext_resource path="res://assets/icon_expand.png" type="Texture" id=4]
[ext_resource path="res://assets/icon_collapse.png" type="Texture" id=5]
[ext_resource path="res://components/config/component_config_complex.gd" type="Script" id=6]
[ext_resource path="res://components/config/component_config_array.gd" type="Script" id=7]
[ext_resource path="res://scripts/tools/scroll_container_scrollbar_claim_space.gd" type="Script" id=8]
[ext_resource path="res://components/config/component_config_line_edit_int.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.141176, 0.141176, 0.203922, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color( 0.160784, 0.117647, 0.176471, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/theme/Barlow-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 13
use_mipmaps = true
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 10.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0.0509804, 0.0980392, 0.196078 )
border_width_left = 4
border_color = Color( 0.913725, 0.552941, 0.968627, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 8.0
expand_margin_top = 40.0

[sub_resource type="StyleBoxEmpty" id=7]
content_margin_left = 10.0
content_margin_bottom = 20.0

[node name="Config" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_constants/margin_right = 10
custom_constants/margin_top = 40
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 1 )

[node name="TabManager" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 40.0
margin_right = 1910.0
margin_bottom = 1070.0
custom_constants/separation = -1

[node name="TabsBar" type="HBoxContainer" parent="TabManager"]
margin_right = 1900.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="StartSpacer" type="MarginContainer" parent="TabManager/TabsBar"]
margin_right = 8.0
margin_bottom = 30.0
rect_min_size = Vector2( 8, 0 )

[node name="Tabs" type="Tabs" parent="TabManager/TabsBar"]
margin_left = 8.0
margin_right = 1900.0
margin_bottom = 30.0
size_flags_horizontal = 15
size_flags_vertical = 3
custom_constants/label_valign_fg = 0
custom_constants/hseparation = 50
custom_constants/label_valign_bg = 0
custom_constants/top_margin = 0
tab_align = 0

[node name="MainPanel" type="PanelContainer" parent="TabManager"]
show_behind_parent = true
margin_top = 29.0
margin_right = 1900.0
margin_bottom = 997.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="ScrollContainer" type="ScrollContainer" parent="TabManager/MainPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1890.0
margin_bottom = 958.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
script = ExtResource( 8 )

[node name="Content" type="MarginContainer" parent="TabManager/MainPanel/ScrollContainer"]
margin_right = 1880.0
margin_bottom = 948.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TabManager"]
margin_top = 996.0
margin_right = 1900.0
margin_bottom = 1030.0
rect_min_size = Vector2( 0, 34 )
size_flags_vertical = 8
custom_constants/separation = 10
alignment = 1

[node name="CloseConfigButton" type="Button" parent="TabManager/HBoxContainer"]
margin_left = 875.0
margin_top = 10.0
margin_right = 923.0
margin_bottom = 34.0
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Close"

[node name="SaveConfigButton" type="Button" parent="TabManager/HBoxContainer"]
margin_left = 933.0
margin_top = 10.0
margin_right = 1025.0
margin_bottom = 34.0
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Save Config"

[node name="Templates" type="VBoxContainer" parent="."]
visible = false
margin_left = 10.0
margin_top = 40.0
margin_right = 1910.0
margin_bottom = 1070.0

[node name="ElementSimple" type="VBoxContainer" parent="Templates"]
margin_right = 1900.0
margin_bottom = 37.0
custom_constants/separation = 1
script = ExtResource( 3 )

[node name="VarContent" type="HBoxContainer" parent="Templates/ElementSimple"]
margin_right = 1900.0
margin_bottom = 20.0

[node name="VarName" type="Label" parent="Templates/ElementSimple/VarContent"]
margin_right = 300.0
margin_bottom = 20.0
rect_min_size = Vector2( 300, 0 )
text = "Description"

[node name="VarValueBool" type="CheckBox" parent="Templates/ElementSimple/VarContent"]
visible = false
margin_left = 254.0
margin_right = 278.0
margin_bottom = 24.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/hover_pressed = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
flat = true

[node name="VarValueString" type="LineEdit" parent="Templates/ElementSimple/VarContent"]
visible = false
margin_left = 254.0
margin_right = 1920.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="VarValueInt" type="LineEdit" parent="Templates/ElementSimple/VarContent"]
visible = false
margin_left = 254.0
margin_right = 1920.0
margin_bottom = 24.0
size_flags_horizontal = 3
script = ExtResource( 9 )

[node name="Description" type="Label" parent="Templates/ElementSimple"]
modulate = Color( 1, 1, 1, 0.54902 )
margin_top = 21.0
margin_right = 1900.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )
text = "Description"

[node name="ElementComplex" type="VBoxContainer" parent="Templates"]
margin_top = 41.0
margin_right = 1900.0
margin_bottom = 91.0
script = ExtResource( 6 )

[node name="Header" type="VBoxContainer" parent="Templates/ElementComplex"]
margin_right = 1900.0
margin_bottom = 36.0
custom_constants/separation = 0

[node name="Top" type="HBoxContainer" parent="Templates/ElementComplex/Header"]
margin_right = 1900.0
margin_bottom = 20.0

[node name="Name" type="Label" parent="Templates/ElementComplex/Header/Top"]
margin_right = 1876.0
margin_bottom = 20.0
mouse_filter = 1
size_flags_horizontal = 3
text = "Test"

[node name="Expand" type="TextureButton" parent="Templates/ElementComplex/Header/Top"]
margin_left = 1880.0
margin_right = 1900.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Description" type="Label" parent="Templates/ElementComplex/Header"]
modulate = Color( 1, 1, 1, 0.54902 )
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 36.0
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "Description"

[node name="Margin" type="PanelContainer" parent="Templates/ElementComplex"]
show_behind_parent = true
margin_top = 40.0
margin_right = 1900.0
margin_bottom = 50.0
custom_styles/panel = SubResource( 5 )

[node name="Content" type="VBoxContainer" parent="Templates/ElementComplex/Margin"]
margin_left = 10.0
margin_top = 5.0
margin_right = 1895.0
margin_bottom = 5.0
rect_clip_content = true

[node name="ExpandTween" type="Tween" parent="Templates/ElementComplex"]

[node name="ElementMainLevel" type="VBoxContainer" parent="Templates"]
margin_top = 95.0
margin_right = 1900.0
margin_bottom = 95.0
custom_constants/separation = 20

[node name="ElementConfigTab" type="VBoxContainer" parent="Templates"]
margin_top = 99.0
margin_right = 1900.0
margin_bottom = 147.0

[node name="Description" type="Label" parent="Templates/ElementConfigTab"]
margin_right = 1900.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Test"

[node name="HSeparator" type="HSeparator" parent="Templates/ElementConfigTab"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_top = 24.0
margin_right = 1900.0
margin_bottom = 28.0

[node name="Spacer" type="Control" parent="Templates/ElementConfigTab"]
margin_top = 32.0
margin_right = 1900.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 16 )

[node name="ElementArray" type="VBoxContainer" parent="Templates"]
margin_top = 151.0
margin_right = 1900.0
margin_bottom = 179.0
script = ExtResource( 7 )

[node name="Content" type="VBoxContainer" parent="Templates/ElementArray"]
margin_right = 1900.0

[node name="ArrayElement" type="HBoxContainer" parent="Templates/ElementArray"]
visible = false
margin_top = 4.0
margin_right = 1900.0
margin_bottom = 28.0

[node name="VarValueString" type="LineEdit" parent="Templates/ElementArray/ArrayElement"]
margin_right = 1842.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="VarValueInt" type="LineEdit" parent="Templates/ElementArray/ArrayElement"]
visible = false
margin_left = 254.0
margin_right = 1920.0
margin_bottom = 24.0
size_flags_horizontal = 3
script = ExtResource( 9 )

[node name="DeleteButton" type="Button" parent="Templates/ElementArray/ArrayElement"]
margin_left = 1846.0
margin_right = 1900.0
margin_bottom = 24.0
text = "delete"

[node name="AddButton" type="Button" parent="Templates/ElementArray"]
margin_top = 4.0
margin_right = 1900.0
margin_bottom = 28.0
text = "add"

[node name="ElementDict" type="VBoxContainer" parent="Templates"]
margin_top = 183.0
margin_right = 1900.0
margin_bottom = 203.0

[node name="Key" type="Label" parent="Templates/ElementDict"]
margin_right = 300.0
margin_bottom = 20.0
rect_min_size = Vector2( 300, 0 )
text = "Test"

[node name="HSeparator" type="HSeparator" parent="Templates/ElementDict"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_right = 40.0
margin_bottom = 4.0

[node name="Container" type="PanelContainer" parent="Templates/ElementDict"]
margin_right = 10.0
margin_bottom = 10.0
custom_styles/panel = SubResource( 7 )

[connection signal="tab_changed" from="TabManager/TabsBar/Tabs" to="." method="_on_Tabs_tab_changed"]
[connection signal="pressed" from="TabManager/HBoxContainer/CloseConfigButton" to="." method="_on_CloseConfigButton_pressed"]
[connection signal="pressed" from="TabManager/HBoxContainer/SaveConfigButton" to="." method="_on_SaveConfigButton_pressed"]
[connection signal="gui_input" from="Templates/ElementComplex/Header/Top/Name" to="Templates/ElementComplex" method="_on_Name_gui_input"]
[connection signal="toggled" from="Templates/ElementComplex/Header/Top/Expand" to="Templates/ElementComplex" method="_on_Expand_toggled"]
[connection signal="gui_input" from="Templates/ElementComplex/Header/Description" to="Templates/ElementComplex" method="_on_Name_gui_input"]
[connection signal="tween_all_completed" from="Templates/ElementComplex/ExpandTween" to="Templates/ElementComplex" method="_on_ExpandTween_tween_all_completed"]
[connection signal="pressed" from="Templates/ElementArray/AddButton" to="Templates/ElementArray" method="_on_AddButton_pressed"]
